added new changes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -44,7 +44,7 @@ spring.cloud.gateway.routes[5].filters[1]=AuthorizationGatewayFilter
 spring.cloud.gateway.routes[6].id=address
 spring.cloud.gateway.routes[6].uri=lb://address
 spring.cloud.gateway.routes[6].predicates[0]=Path=/address/deleteAddress
-spring.cloud.gateway.routes[6].predicates[1]=Method=POST
+spring.cloud.gateway.routes[6].predicates[1]=Method=GET
 spring.cloud.gateway.routes[6].filters[0]=RemoveRequestHeader=Cookie
 spring.cloud.gateway.routes[6].filters[1]=AuthorizationGatewayFilter
 
@@ -54,3 +54,55 @@ spring.cloud.gateway.routes[7].predicates[0]=Path=/address/getAllAddress
 spring.cloud.gateway.routes[7].predicates[1]=Method=GET
 spring.cloud.gateway.routes[7].filters[0]=RemoveRequestHeader=Cookie
 spring.cloud.gateway.routes[7].filters[1]=AuthorizationGatewayFilter
+
+spring.cloud.gateway.routes[8].id=request
+spring.cloud.gateway.routes[8].uri=lb://request
+spring.cloud.gateway.routes[8].predicates[0]=Path=/request/addRequestInBucket
+spring.cloud.gateway.routes[8].predicates[1]=Method=GET
+spring.cloud.gateway.routes[8].filters[0]=RemoveRequestHeader=Cookie
+spring.cloud.gateway.routes[8].filters[1]=AuthorizationGatewayFilter
+
+spring.cloud.gateway.routes[9].id=admin
+spring.cloud.gateway.routes[9].uri=lb://admin
+spring.cloud.gateway.routes[9].predicates[0]=Path=/admin/saveBhangarTypeAndPrice
+spring.cloud.gateway.routes[9].predicates[1]=Method=GET
+spring.cloud.gateway.routes[9].filters[0]=RemoveRequestHeader=Cookie
+
+spring.cloud.gateway.routes[10].id=admin
+spring.cloud.gateway.routes[10].uri=lb://admin
+spring.cloud.gateway.routes[10].predicates[0]=Path=/admin/getBhangarList
+spring.cloud.gateway.routes[10].predicates[1]=Method=GET
+spring.cloud.gateway.routes[10].filters[0]=RemoveRequestHeader=Cookie
+
+spring.cloud.gateway.routes[11].id=admin
+spring.cloud.gateway.routes[11].uri=lb://admin
+spring.cloud.gateway.routes[11].predicates[0]=Path=/admin/deleteBhangarTypeAndPrice
+spring.cloud.gateway.routes[11].predicates[1]=Method=GET
+spring.cloud.gateway.routes[11].filters[0]=RemoveRequestHeader=Cookie
+
+spring.cloud.gateway.routes[12].id=admin
+spring.cloud.gateway.routes[12].uri=lb://admin
+spring.cloud.gateway.routes[12].predicates[0]=Path=/admin/getBhangarItemInfo
+spring.cloud.gateway.routes[12].predicates[1]=Method=GET
+spring.cloud.gateway.routes[12].filters[0]=RemoveRequestHeader=Cookie
+
+spring.cloud.gateway.routes[13].id=admin
+spring.cloud.gateway.routes[13].uri=lb://admin
+spring.cloud.gateway.routes[13].predicates[0]=Path=/admin/updateBhangarTypeAndPrice
+spring.cloud.gateway.routes[13].predicates[1]=Method=GET
+spring.cloud.gateway.routes[13].filters[0]=RemoveRequestHeader=Cookie
+
+spring.cloud.gateway.routes[14].id=request
+spring.cloud.gateway.routes[14].uri=lb://request
+spring.cloud.gateway.routes[14].predicates[0]=Path=/request/deleteCustomerRequestMedia
+spring.cloud.gateway.routes[14].predicates[1]=Method=GET
+spring.cloud.gateway.routes[14].filters[0]=RemoveRequestHeader=Cookie
+spring.cloud.gateway.routes[14].filters[1]=AuthorizationGatewayFilter
+
+spring.cloud.gateway.routes[15].id=request
+spring.cloud.gateway.routes[15].uri=lb://request
+spring.cloud.gateway.routes[15].predicates[0]=Path=/request/deleteRequestsInBucket
+spring.cloud.gateway.routes[15].predicates[1]=Method=GET
+spring.cloud.gateway.routes[15].filters[0]=RemoveRequestHeader=Cookie
+spring.cloud.gateway.routes[15].filters[1]=AuthorizationGatewayFilter
+
