--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -106,3 +106,13 @@ spring.cloud.gateway.routes[15].predicates[1]=Method=GET
 spring.cloud.gateway.routes[15].filters[0]=RemoveRequestHeader=Cookie
 spring.cloud.gateway.routes[15].filters[1]=AuthorizationGatewayFilter
 
+spring.cloud.gateway.routes[16].id=request
+spring.cloud.gateway.routes[16].uri=lb://request
+spring.cloud.gateway.routes[16].predicates[0]=Path=/request/updateCustomersRequestInBucket
+spring.cloud.gateway.routes[16].predicates[1]=Method=GET
+spring.cloud.gateway.routes[16].filters[0]=RemoveRequestHeader=Cookie
+spring.cloud.gateway.routes[16].filters[1]=AuthorizationGatewayFilter
+
+
+
+
